# tetra-monitor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
config/: afiliacion.yaml  afiliacion.yaml.example  config.example.yaml  config.yaml  config.yaml.example  grupos.yaml  grupos.yaml.example  keywords.yaml  keywords.yaml.example  nginx.conf  scan.yaml
data/db/: init_db.sql  schema.sql
db/migrations/: 003_usuarios.sql
scripts/: backup_db.sh  hash_password.py  install.sh  migrate_grupos.sql  reload_grupos.py  setup.sh  setup_env.sh  setup_nginx.sh  start.sh  tetra-monitor.service.template  tetra-monitor.service.txt
services/: tetra-monitor.service  tetra-webrtc.service  tetra_monitor.service
src/: api.py  app_state.py  database.py  keyword_filter.py  main.py  pei_daemon.py  scan_config.py  stt_processor.py  telegram_bot.py
src/api/: api.py
src/audio/: audio_buffer.py  audio_cleanup.py
src/core/: afiliacion.py  database.py  logger.py  radio_config.py  scan_config.py  stt_processor.py
src/db/: grupos.py  llamadas.py  pool.py  usuarios.py
src/filters/: keyword_filter.py
src/integrations/: email_notifier.py  telegram_bot.py
tests/: test_afiliacion.py  test_api.py  test_email_notifier.py  test_keyword_filter.py  test_keywords.py  test_pei_daemon.py  test_pei_parser.py  test_telegram_bot.py  test_usuarios_db.py  test_zello_streamer.py
(+12 files in other folders)
