[project]
name = "tetra-monitor"
version = "1.1.0"
description = "Sistema de monitorización de redes TETRA sobre Raspberry Pi"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Lluis de la Rubia", email = "lluisasturies@gmail.com" }]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # líneas largas — controlado por line-length
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
